change intruction readme

--- a/src/pug/layouts/mixins.pug
+++ b/src/pug/layouts/mixins.pug
@@ -58,7 +58,7 @@ mixin main_dashboard()
     if block
       block
     else
-      p No content provided
+      p On Progress
 mixin pagination(id)
   .py-2.px-4.position-relative.border-top
     .d-flex.align-item-center
