--- a/src/pug/mitra.pug
+++ b/src/pug/mitra.pug
@@ -6,3 +6,5 @@ extends layouts/layout
 block header
   include partials/header-dashboard
   include partials/sidebar-mitra
+block content
+  +main_dashboard()
