--- a/src/pug/admin.pug
+++ b/src/pug/admin.pug
@@ -6,3 +6,5 @@ extends layouts/layout
 block header
   include partials/header-dashboard
   include partials/sidebar-admin
+block content
+  +main_dashboard()
