--- a/src/pug/partials/sidebar-user.pug
+++ b/src/pug/partials/sidebar-user.pug
@@ -41,7 +41,7 @@
         span Kebutuhan Izin
       +alink('user-jadwal')
         span Jadwal
-        +bx('bx-info-circle')
+        i.bx.bx-info-circle(data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Menu Jadwal Ranahnya Mitra")
       +alink('user-kronologi')
         span Kronologi
       +alink('user-tugas-tugas')
