--- a/src/pug/user-master-proyek.pug
+++ b/src/pug/user-master-proyek.pug
@@ -60,7 +60,7 @@ block content
             tbody.body.align-middle
               each lo in ['Apartment Green Lake City', 'Sudirman Fashion Week', 'Perumahan Belka Residence']
                 tr
-                  td.px-4.elipsis-table=lo
+                  td.px-4.elipsis-cell=lo
                   td DKI Jakarta
                   td Dimas
                   td Hamid
