--- a/src/pug/user-master-tanah.pug
+++ b/src/pug/user-master-tanah.pug
@@ -28,7 +28,7 @@ block content
           .form-check.body-super
             input#setuju.form-check-input(type='checkbox' value='')
             label.form-check-label.body(for='setuju')
-              | Default checkbox
+              | Jadikan pemohon sebagai default
       .p-4.bg-light.rounded
         .d-flex.align-items-end.mb-3.gap-4
           .flex-grow-1
@@ -50,7 +50,7 @@ block content
           .form-check.body-super
             input#setuju.form-check-input(type='checkbox' value='')
             label.form-check-label.body(for='setuju')
-              | Default checkbox
+              | Jadikan lokasi sebagai default
       div
         ul.nav.tab-fill.nav-tabs(role='tablist')
           li.nav-item(role='presentation')
