--- a/src/sass/_select.sass
+++ b/src/sass/_select.sass
@@ -13,6 +13,9 @@
   align-items: center
   float: none
   height: 40px
+  width: fit-content
+  &.right
+    float: none
   &.open
     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25)
   &:focus
