--- a/src/sass/_variable-custom.sass
+++ b/src/sass/_variable-custom.sass
@@ -11,6 +11,7 @@ $btn-font-weight: 600
 $input-btn-padding-y: .4375rem
 $input-btn-padding-x: 1rem
 $input-btn-font-size: .9375rem
+$input-disabled-color: #AEAEB4
 
 $font-size-sm: $font-size-base * .8125
 
