--- a/src/sass/_button-cstm.sass
+++ b/src/sass/_button-cstm.sass
@@ -1,8 +1,23 @@
+.btn
+  display: inline-flex
+  align-items: center
+  justify-content: center
+  gap: 12px
 .btn[data-bs-toggle]
   --bs-btn-active-border-color: transparent
+.bx
+  font-size: 1.4375em
+
+svg.icon
+  transition: all 0.15s ease
+  height: 24px
+  width: 24px
 .modal-expand-collapse
   color: #878994
   &[aria-expanded="true"]
     color: $primary
 .elv-1
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12)
+/* pro - elevation 2 */
+.elv-2
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.12);
