--- a/src/pug/user-kebutuhan-izin.pug
+++ b/src/pug/user-kebutuhan-izin.pug
@@ -148,7 +148,7 @@ block content
                           td.px-4 Dokumen Admin
                           td Surat Permohonan
                           td.text-center
-                            button.btn.btn-primary.rounded-pill
+                            a.btn.btn-primary.rounded-pill(href="/user-kebutuhan-izin-detail.html")
                               span Lihat & Upload
                           td.text-center
                             span.align-middle 1/#{i}
