--- a/src/sass/_button-cstm.sass
+++ b/src/sass/_button-cstm.sass
@@ -20,4 +20,59 @@ svg.icon
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12)
 /* pro - elevation 2 */
 .elv-2
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.12)
+
+.action-item
+  display: inline-block
+  position: relative
+  &.active
+    .action-head
+      color: $primary
+    .action-body
+      opacity: 1
+      visibility: visible
+  &:hover
+    .action-head
+      .bx
+        transform: scale(1.1)
+  .action-body
+    opacity: 0
+    visibility: hidden
+    position: absolute
+    -webkit-transform: translateY(8px)
+    transform: translateY(8px)
+    right: 0
+    border-radius: 5px
+    width: 200px
+    z-index: 20
+    transition: all 0.15s ease
+    border: 1px solid #FFFFFF
+    background-color: #FCFCFC
+    box-shadow: 0px 40px 64px -12px rgba(0, 0, 0, 0.08), 0px 0px 14px -4px rgba(0, 0, 0, 0.05), 0px 32px 48px -8px rgba(0, 0, 0, 0.1)
+    .btn.action-item
+      --bs-btn-active-bg: transparent
+      --bs-btn-active-border-color: transparent
+      --bs-btn-disabled-border-color: transparent
+      --bs-btn-hover-bg: rgba(0, 0, 0, .05)
+      --bs-btn-disabled-color: rgba(0, 0, 0, .35)
+      display: inline-flex
+      width: 100%
+      justify-content: start
+
+.tab-fill.nav-tabs
+  --bs-nav-tabs-link-active-bg: #{$primary}
+  --bs-nav-tabs-link-active-color: #{$white}
+  .nav-link
+    &:not(.active)
+      border-color: var(--bs-nav-tabs-border-color)
+    --bs-nav-link-color: #878994
+    --bs-nav-link-font-size: 15px
+    --bs-nav-link-font-weight: 500
+
+.footer-button
+  box-shadow: 0px -2px 24px 0px rgba(0, 0, 0, 0.08)
+
+.collapsed-icon::before
+  content: "\ea57"
+.collapsed .collapsed-icon::before
+  content: "\ea4a"
