--- a/src/sass/_variable-custom.sass
+++ b/src/sass/_variable-custom.sass
@@ -23,6 +23,16 @@ $h5-font-size: $font-size-base * 1.25
 $h6-font-size: $font-size-base * 1.125
 $headings-font-weight: 600
 /* Colors*/
+$gray-100: #F3F4F7
+$gray-300: #D8D9DF
+$gray-600: #EFF0F4
+$gray-900: #3D4053
+$black: #181C32
+$dark: $black
+// scss-docs-start color-variables
+$blue: #1565D8
+$red: #FF1744
+$green: #03C366
 $orange: #FF9800
 $warning: $orange
 $enable-dark-mode: false
