--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -9,8 +9,10 @@ html(lang="en")
       block modal
       block scripts
         script(src="/js/lib/jquery.min.js")
-        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
         script(src="/js/lib/bootstrap.bundle.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
+        script(src="/js/lib/moment.min.js")
+        script(src="/js/lib/jquery.daterangepicker.min.js")
         script(src="/js/lib/slick.min.js")
         script(src="/js/lib/apexcharts.min.js")
         script(src="/js/charts.js")
