--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,16 +2,13 @@
 @import _typography
 @import lib/_slick
 @import lib/_nice-select
+@import lib/daterangepicker
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
 @import _mixins
 @import _sidebar
 @import _button-cstm
+@import _datepicker.cstm
 @import _select
-
-.collapsed-icon::before
-  content: "\ea57"
-.collapsed .collapsed-icon::before
-  content: "\ea4a"
 
 .toggle-item
   .toggle-head
@@ -58,49 +55,6 @@
     border: 1px solid #FFFFFF
     background-color: #ffffff
     box-shadow: 0px 40px 64px -12px rgba(0, 0, 0, 0.08), 0px 0px 14px -4px rgba(0, 0, 0, 0.05), 0px 32px 48px -8px rgba(0, 0, 0, 0.1)
-.action-item
-  display: inline-block
-  position: relative
-  &.active
-    .action-head
-      color: $primary
-    .action-body
-      opacity: 1
-      visibility: visible
-  &:hover
-    .action-head
-      .bx
-        transform: scale(1.1)
-  .action-body
-    opacity: 0
-    visibility: hidden
-    position: absolute
-    -webkit-transform: translateY(8px)
-    transform: translateY(8px)
-    right: 0
-    border-radius: 5px
-    width: 200px
-    z-index: 20
-    transition: all 0.15s ease
-    border: 1px solid #FFFFFF
-    background-color: #FCFCFC
-    box-shadow: 0px 40px 64px -12px rgba(0, 0, 0, 0.08), 0px 0px 14px -4px rgba(0, 0, 0, 0.05), 0px 32px 48px -8px rgba(0, 0, 0, 0.1)
-    .btn.action-item
-      --bs-btn-active-bg: transparent
-      --bs-btn-active-border-color: transparent
-      display: inline-flex
-      width: 100%
-      justify-content: start
-
-.tab-fill.nav-tabs
-  --bs-nav-tabs-link-active-bg: #{$primary}
-  --bs-nav-tabs-link-active-color: #{$white}
-  .nav-link
-    &:not(.active)
-      border-color: var(--bs-nav-tabs-border-color)
-    --bs-nav-link-color: #878994
-    --bs-nav-link-font-size: 15px
-    --bs-nav-link-font-weight: 500
 
 .form-check
   .form-check-input
@@ -115,6 +69,12 @@
 .cell-fit
   white-space: nowrap
   width: 1%
+.elipsis-cell
+  max-width: 215px
+  white-space: nowrap
+  width: 50px
+  overflow: hidden
+  text-overflow: ellipsis
 
 .photo-proyek
   width: 48px
@@ -148,12 +108,46 @@
     top: 0
     right: 0
     width: 100%
-.elipsis-cell
-  max-width: 215px
-  white-space: nowrap
-  width: 50px
-  overflow: hidden
-  text-overflow: ellipsis
 
-.footer-button
-  box-shadow: 0px -2px 24px 0px rgba(0, 0, 0, 0.08)
+input[type="checkbox"]:checked
+  & + .switch-price
+    &::before
+      transform: translateX(100%)
+  & + .switch-price .switch-price-month
+    color: inherit
+  & + .switch-price .switch-price-year
+    color: #fff
+
+
+.switch-price
+  position: relative
+  background-color: #EEF1F3
+  cursor: pointer
+  overflow: hidden
+  border-radius: 100px
+  transition: all 0.15s ease
+
+  &-month
+    z-index: 10
+    color: #fff
+
+  &-year
+    z-index: 10
+    color: inherit
+
+  &::before
+    content: ""
+    position: absolute
+    box-sizing: content-box
+    left: 8px
+    width: calc(50% - 8px)
+    height: calc(100% - 8px)
+    border-radius: 100px
+    box-shadow: 0px 4px 8px -4px rgba(0, 0, 0, 0.25), inset 0px -1px 1px rgba(0, 0, 0, 0.49), inset 0px 2px 1px rgba(255, 255, 255, 0.06)
+    background-color: $black
+    transition: transform .30s ease, background-color .15s ease, -webkit-transform .30s ease
+
+.pricing-box
+  border-top-width: 5px
+  border-top-style: solid
+  box-shadow: 0px 30px 70px 0px rgba(0, 0, 0, 0.03)
