dropdown user profile

--- a/src/pug/partials/sidebar-admin.pug
+++ b/src/pug/partials/sidebar-admin.pug
@@ -52,6 +52,6 @@
     hr.border-top
 
   .nav-item
-    +alink('lisensia-plan')
+    +alink('logout')
       +bx('bx-log-out-circle')
       span Sign Out
