--- a/src/pug/partials/sidebar-mitra.pug
+++ b/src/pug/partials/sidebar-mitra.pug
@@ -6,7 +6,7 @@
   .nav-item
     +alink('mitra-client-management')
       +bx("bx-id-card")
-      span Dashboard
+      span Client Management
   .nav-item
     +alink('mitra-management')
       +bx("bx-user-circle")
