--- a/src/pug/user-jadwal.pug
+++ b/src/pug/user-jadwal.pug
@@ -47,11 +47,16 @@ block content
           div
             button.btn.btn-primary
               span Tampilkan
-      .py-1.px-2.bg-primary-subtle.text-primary.rounded
-        .d-flex.align-items-center.gap-2
-          span.d-flex.p-2
-            +bx('bx-info-circle')
-          p.mb-0.subtitle Silakan masukkan jadwal dengan klik tombol Atur Jadwal
+      .d-flex.align-items-center.gap-4
+        .py-1.px-2.bg-primary-subtle.text-primary.rounded.flex-grow-1
+          .d-flex.align-items-center.gap-2
+            span.d-flex.p-2
+              +bx('bx-info-circle')
+            p.mb-0.subtitle Silakan masukkan jadwal dengan klik tombol Atur Jadwal
+        div
+          a.btn.btn-primary(type="button" href="/user-jadwal-detail.html")
+            +bx('bx-pencil')
+            span Atur Jadwal
       .border.rounded
         table.table.table-no-bottom-border.table-striped.striped-custom
           thead.subtitle.align-middle
