--- a/src/pug/user.pug
+++ b/src/pug/user.pug
@@ -31,44 +31,44 @@ block content
             span Edit
       .row.row-cols-5.g-3
         .col
-          .p-4.bg-warning-subtle.rounded-3
+          a.d-block.text-decoration-none.p-4.bg-warning-subtle.rounded-3(href="/user-management-pemohon.html")
             .mb-4
               .p-3.rounded-circle.text-white.d-inline-flex.align-items-center.justify-content-center.bg-warning
                 +bx('bx-copy-alt')
-            .d-flex.gap-1.justify-content-between.fw-semibold
-              span Kelola Pemohon
+            .d-flex.gap-1.justify-content-between.fw-semibold.text-body
+              span Pemohon
               +bx('bx-right-arrow-alt')
         .col
-          .p-4.bg-success-subtle.rounded-3
+          a.d-block.text-decoration-none.p-4.bg-success-subtle.rounded-3(href="/user-management.html")
             .mb-4
               .p-3.rounded-circle.text-white.d-inline-flex.align-items-center.justify-content-center.bg-success
-                +bx('bx-copy-alt')
-            .d-flex.gap-1.justify-content-between.fw-semibold
-              span Kelola Pemohon
+                +bx('bx-user')
+            .d-flex.gap-1.justify-content-between.fw-semibold.text-body
+              span Pengguna
               +bx('bx-right-arrow-alt')
         .col
-          .p-4.bg-info-subtle.rounded-3
+          a.d-block.text-decoration-none.p-4.bg-info-subtle.rounded-3(href="/user-jadwal.html")
             .mb-4
               .p-3.rounded-circle.text-white.d-inline-flex.align-items-center.justify-content-center.bg-info
-                +bx('bx-copy-alt')
-            .d-flex.gap-1.justify-content-between.fw-semibold
-              span Kelola Pemohon
+                +bx('bx-calendar-check')
+            .d-flex.gap-1.justify-content-between.fw-semibold.text-body
+              span Jadwal
               +bx('bx-right-arrow-alt')
         .col
-          .p-4.bg-danger-subtle.rounded-3
+          a.d-block.text-decoration-none.p-4.bg-danger-subtle.rounded-3(href="/user-kronologi.html")
             .mb-4
               .p-3.rounded-circle.text-white.d-inline-flex.align-items-center.justify-content-center.bg-danger
-                +bx('bx-copy-alt')
-            .d-flex.gap-1.justify-content-between.fw-semibold
-              span Kelola Pemohon
+                +bx('bx-edit-alt')
+            .d-flex.gap-1.justify-content-between.fw-semibold.text-body
+              span Kronologi
               +bx('bx-right-arrow-alt')
         .col
-          .p-4.bg-primary-subtle.rounded-3
+          a.d-block.text-decoration-none.p-4.bg-primary-subtle.rounded-3(href="user-produk-permit.html")
             .mb-4
               .p-3.rounded-circle.text-white.d-inline-flex.align-items-center.justify-content-center.bg-primary
-                +bx('bx-copy-alt')
-            .d-flex.gap-1.justify-content-between.fw-semibold
-              span Kelola Pemohon
+                +bx('bx-book-content')
+            .d-flex.gap-1.justify-content-between.fw-semibold.text-body
+              span BAST Produk
               +bx('bx-right-arrow-alt')
     .p-4.bg-light.rounded.mb-4
       h6 Pemohon
