--- a/src/pug/partials/header-dashboard.pug
+++ b/src/pug/partials/header-dashboard.pug
@@ -7,15 +7,60 @@ header.header.bg-white.d-flex.align-items-center.position-fixed.top-0.end-0.bord
       +bx('bx-diamond')
       span.fw-semibold Upgrade Plan
     .nav-item.notification-item.toggle-item
-      button.toggle-head.nav-link.active
+      button.toggle-head.nav-link.active.btn.p-2
         +bx('bell')
-      .toggle-body.rounded-4.p-3
-        .top.d-flex.align-items-center.justify-content-between.mb-3
-          .toggle-title.ms-3 Messages
-            button.action-item
-              +i('check')
-              | Mark as read
-            button.action-item
-              +i('trash')
-              | Delete message
+      .toggle-body.menu-notification.rounded-4.p-3.elv-2
+        .d-flex.align-items-center.justify-content-between.mb-3
+          .body-big.fw-semibold Notification
+          .action-item
+            button.btn.action-head.rounded-circle.p-2.btn-light(type="button")
+              +bx('bx-dots-horizontal-rounded')
+            .action-body.p-3
+              .d-grid
+                button.btn.action-item(type="button")
+                  +bx('bx-check')
+                  span Mark as read
+                button.btn.action-item(type="button")
+                  +bx('bx-trash')
+                  span Delete
         a.btn.d-flex.mx-3(href="/message-center.html") View in message center
+    .nav-item.notification-item.toggle-item
+      .d-flex.align-items-center.gap-3.toggle-head
+        .border.rounded-circle
+          .user-avatar.d-flex.border.border-white.justify-content-center.align-items-center.overflow-hidden
+            img.h-auto.w-100(src="/img/content/user-1.jpg", alt="Profile Arga Dinata")
+        div
+          .subtitle Arga Dinata
+          .caption Owner
+        .subtitle.d-inline-flex
+          +bx('bx-chevron-down')
+      .toggle-body.menu-profile.rounded.py-3.elv-2
+        .nav.flex-column
+          .nav-item
+            a.nav-link.d-flex.gap-4(href="/user-profile.html")
+              +bx('bx-user')
+              span User Profile
+          .nav-item
+            a.nav-link.d-flex.gap-4(href="/user-profile.html")
+              +bx('bx-key')
+              span Change Password
+          .nav-item
+            hr
+          .nav-item
+            .nav-link.d-flex.align-items-center.gap-4.collapsed(data-bs-target="#menu-profile", data-bs-toggle="collapse" class='collapsed')
+              +bx('bx-transfer-alt')
+              span Switch Account
+              +bx("collapsed-icon")(class="ms-auto")
+            .collapse.submenu(id="menu-profile")
+              .wrapper
+                +alink("user")
+                  span User
+                +alink("admin")
+                  span Admin
+                +alink("mitra")
+                  span Mitra
+          .nav-item
+            a.nav-link.text-danger.d-flex.gap-4(href="/user-profile.html")
+              +bx('bx-log-out-circle')
+              span Sign Out
+
