--- a/src/sass/_button-cstm.sass
+++ b/src/sass/_button-cstm.sass
@@ -2,7 +2,11 @@
   display: inline-flex
   align-items: center
   justify-content: center
-  gap: 12px
+  gap: 8px
+  &.btn-sm
+    gap: 4px
+  &.btn-lg
+    gap: 12px
 .btn[data-bs-toggle]
   --bs-btn-active-border-color: transparent
 .bx
@@ -76,3 +80,30 @@ svg.icon
   content: "\ea57"
 .collapsed .collapsed-icon::before
   content: "\ea4a"
+.btn-lock
+  --bs-btn-color: var(--bs-green)
+  --bs-btn-bg: #fff
+  --bs-btn-border-color: var(--bs-border-color)
+  --bs-btn-hover-color: inherit
+  --bs-btn-hover-bg: #fff
+  --bs-btn-hover-border-color: var(--bs-border-color)
+  --bs-btn-focus-shadow-rgb: 56, 124, 222
+  --bs-btn-active-color: var(--bs-orange)
+  --bs-btn-active-bg: #fff
+  --bs-btn-active-border-color: var(--bs-border-color)
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(24, 28, 50, 0.125)
+  --bs-btn-disabled-color: var(--bs-border-color)
+  --bs-btn-disabled-bg: var(--bs-border-color)
+  --bs-btn-disabled-border-color: var(--bs-border-color)
+  span
+    &::before
+      content: "buka"
+      text-transform: capitalize
+.btn-check:checked
+  & + .btn-lock
+    .bx-lock-open-alt
+      &::before
+        content: "\eb4a"
+    span
+      &::before
+        content: "kunci"
