--- a/src/pug/partials/sidebar-admin.pug
+++ b/src/pug/partials/sidebar-admin.pug
@@ -22,13 +22,13 @@
       +alink('admin-izin')
         span Izin
       +alink('admin-kategori-dokumen')
-        span kategori-dokumen
+        span Kategori Dokumen
       +alink('admin-dokumen')
         span Dokumen
       +alink('admin-kategori-peraturan')
         span Kategori Peraturan
       +alink('admin-peraturan')
-        span peraturan
+        span Peraturan
       +alink('admin-set-hari-libur')
         span Set Hari Libur
       +alink('admin-kategori-berita')
