--- a/src/pug/user.pug
+++ b/src/pug/user.pug
@@ -213,7 +213,7 @@ block content
                       small.fw-semibold.ms-auto 8
                     .d-flex.gap-4.align-items-center
                       +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-warning")
-                      small Kecamatan
+                      small Kota
                       small.fw-semibold.ms-auto 5
                     .d-flex.gap-4.align-items-center
                       +bx('bxs-circle')(style="font-size:12px;color: var(--bs-yellow);" class="align-middle")
@@ -221,7 +221,7 @@ block content
                       small.fw-semibold.ms-auto 5
                     .d-flex.gap-4.align-items-center
                       +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-success")
-                      small Kecamatan
+                      small Kelurahan
                       small.fw-semibold.ms-auto 15
               .col-md-8
                 .h-100
