--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -174,3 +174,19 @@ input[type="checkbox"]:checked
   border-radius: 100px
   width: 41px
   height: 41px
+.count-circle-box
+  width: 48px
+  height: 48px
+  border-radius: 100px
+  text-align: center
+  span
+    font-size: 24px
+    line-height: 2
+    font-weight: 600
+.flag-id
+  display: inline-block
+  border: solid .5px
+  border-radius: 2px
+  width: 1.5em
+  height: 1em
+  background-image: linear-gradient(180deg, #c8102e 0, #c8102e 50%, #FFF 50%, #FFF 100%)
